# akunaki

./: .gitignore  README.md
backend/: .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_platform_foundation.py  20260713_0002_job_and_leader_leases.py  20260713_0003_durable_job_execution.py  20260718_0004_connections.py  20260718_0005_oauth_states.py  20260719_0006_sync_transport.py  20260719_0007_sleep_facts.py  20260719_0008_revision_slice_body.py  20260719_0009_deletion_requests.py  20260719_0010_tenant_scoped_fact_key.py  20260719_0011_users_sessions.py  20260719_0012_login_states.py  20260720_0013_overnight_vitals.py  20260720_0014_daily_health_scores.py  20260720_0015_overnight_temperature.py  20260720_0016_overnight_respiratory.py  20260721_0017_subjective_check_ins.py  20260722_0018_anomalies.py  20260722_0019_workout_sessions.py  20260722_0020_derivation_lineage.py  20260723_0021_webhook_inbox.py  20260723_0022_daily_activity.py  20260724_0023_source_selections.py
backend/src/akunaki/: __init__.py  config.py
backend/src/akunaki/adapters/: __init__.py
backend/src/akunaki/adapters/connectors/: __init__.py  google_health.py  google_health_fetch.py  google_push_verifier.py  oauth_client_factory.py  oura.py  oura_fetch.py  polar.py  polar_fetch.py
backend/src/akunaki/adapters/crypto/: __init__.py  config.py  envelope.py  oauth.py  sessions.py
backend/src/akunaki/adapters/db/: __init__.py  anomaly_repository.py  base.py  checkin_repository.py  connection_repository.py  debug_queries.py  deletion_repository.py  derivation_repository.py  engine.py  fact_repository.py  ingestion_repository.py  job_repository.py  models.py  (+8 more)
backend/src/akunaki/api/: __init__.py  __main__.py  app.py  headers.py  security.py
backend/src/akunaki/application/: __init__.py  anomaly_tracker.py  handlers.py  login.py  oauth_linking.py  recovery_inputs.py  recovery_surface.py  score_handlers.py  sleep_surface.py  sync_handlers.py  today_surface.py  tool_registry.py  worker_runtime.py
backend/src/akunaki/domain/: __init__.py  activity_normalizer.py  anomalies.py  baseline.py  connections.py  deletion.py  fetch.py  google_push.py  google_sleep_normalizer.py  jobs.py  oauth.py  oidc.py  prior_load.py  recommendations.py  record_split.py  recovery.py  recovery_components.py  retry.py  schedule.py  secrets.py  sessions.py  sleep_consistency.py  sleep_normalizer.py  sleep_summary.py  source_policy.py  subjective.py  tokens.py  training_label.py  vitals_normalizer.py  webhook_verification.py  workout_normalizer.py  zone_load.py
backend/src/akunaki/ports/: __init__.py  connections.py  facts.py  fetch.py  jobs.py  login.py  oauth_client.py  secrets.py
backend/src/akunaki/worker/: __init__.py  __main__.py
backend/tests/: conftest.py  test_activity_normalizer.py  test_alembic.py  test_anomalies.py  test_anomaly_repository.py  test_anomaly_tracker.py  test_api_healthz.py  test_baseline.py  test_checkin_repository.py  test_checkin_routes.py  test_connection_reconcile.py  test_connection_routes.py  test_connection_secrets_integration.py  test_connections_schema.py  test_database.py  test_debug_routes.py  test_derivation_repository.py  test_envelope_crypto.py  test_fact_versioning.py  test_google_health_backfill.py  test_google_health_fetch.py  test_google_health_oauth_client.py  test_google_push_claims.py  test_google_push_verifier.py  test_google_sleep_normalizer.py  test_health_tools.py  test_incremental_sync_handler.py  test_initial_sync_handler.py  test_job_concurrency.py  test_job_enqueue.py  test_job_lifecycle.py  test_login_flow.py  test_login_states.py  test_model_sdk_absence.py  test_normalize_activity.py  test_normalize_google_sleep.py  test_normalize_handler.py  test_normalize_workouts.py  test_oauth_linking.py  test_oauth_linking_polar.py  (+55 more)
(+41 files in other folders)
