[project]
name = "akunaki"
version = "0.1.0"
description = "Akunaki backend core: FastAPI + SQLAlchemy/libSQL + Alembic (model-free foundation)"
readme = "README.md"
requires-python = ">=3.13.14,<3.14"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "SQLAlchemy==2.0.51",
    "alembic==1.18.5",
    "sqlalchemy-libsql==0.2.0",
    "cryptography==49.0.0",
    "httpx2==2.6.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.21",
    "mypy==2.3.0",
    "import-linter==2.13",
    "pip-audit==2.10.1",
]

[build-system]
requires = ["uv_build==0.11.28"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "akunaki"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-q", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "ASYNC",
    "S",    # bandit subset
    "T20",  # no print (allow in __main__ via per-file)
    "N",    # pep8-naming
    "C4",   # comprehensions
    "PTH",  # pathlib
]
ignore = [
    "S101",  # assert used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"src/akunaki/api/__main__.py" = ["T20"]
"src/akunaki/worker/__main__.py" = ["T20"]
"alembic/**" = ["INP001"]

[tool.ruff.lint.isort]
known-first-party = ["akunaki"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
mypy_path = "src"
packages = ["akunaki"]
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.importlinter]
root_packages = ["akunaki"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain is pure"
type = "forbidden"
source_modules = ["akunaki.domain"]
forbidden_modules = [
    "akunaki.adapters",
    "akunaki.api",
    "akunaki.worker",
    "akunaki.application",
    "sqlalchemy",
    "fastapi",
    "uvicorn",
    "httpx",
    "httpx2",
]

[[tool.importlinter.contracts]]
name = "Application depends only on domain and ports"
type = "forbidden"
source_modules = ["akunaki.application"]
forbidden_modules = [
    "akunaki.adapters",
    "akunaki.api",
    "akunaki.worker",
    "fastapi",
    "uvicorn",
]

[[tool.importlinter.contracts]]
name = "Ports depend only on domain"
type = "forbidden"
source_modules = ["akunaki.ports"]
forbidden_modules = [
    "akunaki.adapters",
    "akunaki.api",
    "akunaki.worker",
    "akunaki.application",
    "sqlalchemy",
    "fastapi",
]

[[tool.importlinter.contracts]]
name = "Adapters do not import api or worker internals"
type = "forbidden"
source_modules = ["akunaki.adapters"]
forbidden_modules = [
    "akunaki.api",
    "akunaki.worker",
]

[[tool.importlinter.contracts]]
name = "No model SDKs in core package"
type = "forbidden"
source_modules = ["akunaki"]
# Top-level package names only (import-linter rejects external subpackages).
forbidden_modules = [
    "openai",
    "anthropic",
    "xai",
    "xai_sdk",
    "openrouter",
    "litellm",
    "ollama",
    "llama_cpp",
    "transformers",
    "torch",
]
